--- a/website/views/pages/entrance/signup.ejs
+++ b/website/views/pages/entrance/signup.ejs
@@ -4,40 +4,40 @@
     <h1>Welcome to Fleet Premium</h1>
     <p class="pb-2">We just need a few details in order to get you a Fleet Premium license key</p>
     <div class="mx-auto">
-      <div class="d-flex flex-row">
+      <div purpose="customer-portal-form" class="d-flex flex-row">
         <div class="card card-body order-first flex-grow-1">
           <ajax-form action="signup" :syncing.sync="syncing" :cloud-error.sync="cloudError" :form-errors.sync="formErrors" :form-data="formData" :form-rules="formRules" @submitted="submittedSignUpForm()">
             <div class="form-group">
               <label for="email-address">Email</label>
               <span style="float: right" class="text-right"><a href="/customers/login">I have an account</a></span>
-              <input class="form-control" id="email-address" type="email"  :class="[formErrors.emailAddress ? 'is-invalid' : '']" v-model.trim="formData.emailAddress">
+              <input class="form-control" id="email-address" type="email"  :class="[formErrors.emailAddress ? 'is-invalid' : '']" v-model.trim="formData.emailAddress" @input="formErrors = {};">
               <div class="invalid-feedback" v-if="formErrors.emailAddress" focus-first>This doesn’t appear to be a valid email address</div>
             </div>
-            <div purpose="hidden-signup" v-show="formData.emailAddress || showFullForm">
+            <div v-show="formData.emailAddress || showFullForm">
               <div class="form-group">
                 <label for="password">Choose a password</label>
-                <input class="form-control" id="password" type="password"  :class="[formErrors.password ? 'is-invalid' : '']" v-model.trim="formData.password" autocomplete="new-password">
-                <div class="invalid-feedback" v-if="formErrors.password === 'minLength'">Password too short!</div>
+                <input class="form-control" id="password" type="password"  :class="[formErrors.password ? 'is-invalid' : '']" v-model.trim="formData.password" autocomplete="new-password"@input="formErrors = {};">
+                <div class="invalid-feedback" v-if="formErrors.password === 'minLength'">Password too short.</div>
                 <div class="invalid-feedback" v-if="formErrors.password === 'required'">Please enter a password.</div>
                 <p class="mt-2"> Minimum length is 8 characters</p>
               </div>
               <div class="form-group">
                 <label for="organization">Organization</label>
-                <input class="form-control" id="organization" type="text"  :class="[formErrors.organization ? 'is-invalid' : '']" v-model.trim="formData.organization">
+                <input class="form-control" id="organization" type="text"  :class="[formErrors.organization ? 'is-invalid' : '']" v-model.trim="formData.organization" @input="formErrors = {};">
                 <div class="invalid-feedback" v-if="formErrors.organization">Please enter the name of your organization.</div>
               </div>
               <div class="row">
                 <div class="col-6">
                   <div class="form-group">
                     <label for="first-name">First name</label>
-                    <input class="form-control" id="first-name" type="text"  :class="[formErrors.firstName ? 'is-invalid' : '']" v-model.trim="formData.firstName" autocomplete="first-name">
+                    <input class="form-control" id="first-name" type="text"  :class="[formErrors.firstName ? 'is-invalid' : '']" v-model.trim="formData.firstName" autocomplete="first-name" @input="formErrors = {};">
                     <div class="invalid-feedback" v-if="formErrors.firstName">Please enter your first name.</div>
                   </div>
                 </div>
                 <div class="col-6">
                   <div class="form-group">
                     <label for="last-name">Last name</label>
-                    <input class="form-control" id="last-name" type="text"  :class="[formErrors.lastName ? 'is-invalid' : '']" v-model.trim="formData.lastName" autocomplete="last-name">
+                    <input class="form-control" id="last-name" type="text"  :class="[formErrors.lastName ? 'is-invalid' : '']" v-model.trim="formData.lastName" autocomplete="last-name" @input="formErrors = {};">
                     <div class="invalid-feedback" v-if="formErrors.lastName">Please enter your last name.</div>
                   </div>
                 </div>
