--- a/website/views/pages/customers/dashboard.ejs
+++ b/website/views/pages/customers/dashboard.ejs
@@ -18,11 +18,11 @@
           </div>
           <div class="col-6 col-lg-2 pt-3 pt-lg-0">
             <strong>Expires</strong>
-            <p><js-timestamp :at="thisSubscription.nextBillingAt" always-show-year format="timeago"></js-timestamp></p>
+            <p><js-timestamp :at="thisSubscription.nextBillingAt" always-show-year format="billing"></js-timestamp></p>
           </div>
           <div class="col-12 col-lg-4 pt-3 pt-lg-0">
-            <strong>License key</strong><img class="d-inline-block ml-3" style="width: 15px; height: 16px; cursor: pointer;" src="/images/icon-copy-15x16@2x.png" alt="click here to copy your license key" @click="clickCopyLicenseKey()">
-            <p><span purpose="license-key" @click="clickExpandLicenseKey()">{{licenseKey}}</span></p>
+            <strong>License key</strong><img class="d-inline-block ml-2" style="width: 15px; height: 16px; cursor: pointer;" src="/images/icon-copy-15x16@2x.png" alt="click here to copy your license key" @click="clickCopyLicenseKey()"><span purpose="copied-notification">Copied to clipboard</span>
+            <p><span purpose="license-key" @click="clickExpandLicenseKey()">{{thisSubscription.fleetLicenseKey}}</span></p>
           </div>
         </div>
       </div>
@@ -30,38 +30,45 @@
 
     <div class="row pt-3">
       <div class="col-12 col-lg-6">
-      <h3 class="pb-3">Your details</h3>
+      <h3 class="pb-4 pb-xl-3">Your details</h3>
         <div purpose="details-card" class="card card-body justify-content-top">
           <div class="row">
             <div class="col-4">Organization:</div>
             <div class="col-8 text-right">
-              <strong>{{me.organization}}</strong><img class="edit-button" src="/images/icon-pencil-24x24@2x.png" alt="A pencil icon indicating that this information can be editted" @click="clickEditButton()">
+              <strong>{{me.organization}}</strong><img purpose="edit-button" src="/images/icon-pencil-24x24@2x.png" alt="A pencil icon indicating that this information can be editted" @click="clickEditButton()">
             </div>
           </div>
           <hr/>
           <div class="row">
             <div class="col-3">Name:</div>
             <div class="col-9 text-right">
-              <strong>{{me.firstName}} {{me.lastName}}</strong><img class="edit-button" src="/images/icon-pencil-24x24@2x.png" alt="A pencil icon indicating that this information can be editted" @click="clickEditButton()">
+              <strong>{{me.firstName}} {{me.lastName}}</strong><img purpose="edit-button" src="/images/icon-pencil-24x24@2x.png" alt="A pencil icon indicating that this information can be editted" @click="clickEditButton()">
             </div>
           </div>
           <hr/>
           <div class="row">
             <div class="col-3">Email:</div>
             <div class="col-9 text-right">
-              <strong :class="[me.emailStatus === 'unconfirmed' || me.emailStatus === 'change-requested' ? 'text-muted' : '']">{{me.emailChangeCandidate ? me.emailChangeCandidate : me.emailAddress}}</strong><img class="edit-button" src="/images/icon-pencil-24x24@2x.png" alt="A pencil icon indicating that this information can be editted" @click="clickEditButton()">
+              <strong :class="[me.emailStatus === 'unconfirmed' || me.emailStatus === 'change-requested' ? 'text-muted' : '']">{{me.emailChangeCandidate ? me.emailChangeCandidate : me.emailAddress}}</strong><img purpose="edit-button" src="/images/icon-pencil-24x24@2x.png" alt="A pencil icon indicating that this information can be editted" @click="clickEditButton()">
+            </div>
+          </div>
+          <hr/>
+          <div class="row">
+            <div class="col-3">Password:</div>
+            <div class="col-9 text-right">
+              <strong>••••••••</strong><img purpose="edit-button" src="/images/icon-pencil-24x24@2x.png" alt="A pencil icon indicating that this information can be editted" @click="clickChangePassword()">
             </div>
           </div>
         </div>
       </div>
 
       <div class="col-12 col-lg-6 pt-4 pt-lg-0">
-        <h3 class="pb-3">Billing and payment</h3>
+        <h3 class="pb-4 pb-xl-3">Billing and payment</h3>
         <div purpose="billing-card" class="card card-body justify-content-center">
           <div class="row pb-3">
             <div class="col-1"><img style="margin-top: 5px; height: 12px; width: 16px;" src="/images/icon-card-32x24@2x.png" alt="A small credit card"></div>
             <div class="col">
-              <p>{{me.billingCardBrand}} ending in <strong>{{me.billingCardLast4}}</strong><img class="edit-button" src="/images/icon-pencil-24x24@2x.png" alt="A pencil icon indicating that this information can be editted" @click="clickUpdateBillingCardButton()"><span style="float: right; cursor: pointer;" class="text-right d-none" @click="clickRemoveCardButton()"><a>remove</a></span></p>
+              <p>{{me.billingCardBrand}} ending in <strong>{{me.billingCardLast4}}</strong><img purpose="edit-button" src="/images/icon-pencil-24x24@2x.png" alt="A pencil icon indicating that this information can be editted" @click="clickUpdateBillingCardButton()"><span style="float: right; cursor: pointer;" class="text-right d-none" @click="clickRemoveCardButton()"><a>remove</a></span></p>
             </div>
           </div>
           <div class="row pb-3">
@@ -69,7 +76,7 @@
             <div class="col">
               <p>{{thisSubscription.numberOfHosts}} devices @ $1.00/device/month</p>
               <p>Billed anually at ${{thisSubscription.subscriptionPrice}}.00/yr</p>
-              <p>Next payment on <js-timestamp :at="thisSubscription.nextBillingAt" always-show-year format="timeago"></js-timestamp></p>
+              <p>Next payment on <js-timestamp :at="thisSubscription.nextBillingAt" always-show-year format="billing"></js-timestamp></p>
             </div>
           </div>
           <div class="row" purpose="contact">
@@ -100,13 +107,13 @@
 
   </div>
 
-  <modal v-if="modal === 'update-profile'" @close="closeModal()" v-cloak purpose="modal">
-    <div class="container">
+  <modal v-if="modal === 'update-profile'" @close="closeModal()" data-backdrop="false" v-cloak purpose="modal">
+    <div class="container" purpose="customer-portal-form">
       <div class="modal-header">
         <h3 class="modal-title text-left">Edit your details?</h3>
       </div>
       <ajax-form action="updateProfile" :syncing.sync="syncing" :cloud-error.sync="cloudError" :form-data="formData" :form-rules="formRules" :form-errors.sync="formErrors" @submitted="submittedUpdateProfileForm()">
-        <div class="modal-bodytext-center">
+        <div class="modal-body">
           <div class="form-group">
             <label for="organization">Organization</label>
             <input class="form-control" id="organization" type="text" v-model.trim="formData.organization" autocomplete="">
@@ -134,7 +141,34 @@
             <div class="invalid-feedback" v-if="formErrors.emailAddress" focus-first>Please enter a valid email address.</div>
           </div>
         </div>
-        <div class="modal-footer border-0 justify-content-center">
+        <div class="border-0 justify-content-center">
+          <ajax-button type="submit" :syncing="syncing" class="btn btn-sm btn-block btn-info">Save</ajax-button>
+        </div>
+      </ajax-form>
+    </div>
+  </modal>
+
+  <modal v-if="modal === 'update-password'" @close="closeModal()" data-backdrop="false" v-cloak purpose="modal">
+    <div class="container" purpose="customer-portal-form">
+      <div class="modal-header">
+        <h3 class="modal-title text-left">Change your password?</h3>
+      </div>
+      <ajax-form action="updatePassword" :syncing.sync="syncing" :cloud-error.sync="cloudError" :form-data="formData" :form-rules="formRules" :form-errors.sync="formErrors" @submitted="submittedUpdatePasswordForm()">
+        <div class="modal-body">
+          <div class="form-group">
+            <label for="oldPassword">Current password</label>
+            <input class="form-control" type="password" id="oldPassword" v-model.trim="formData.oldPassword" autocomplete="password">
+            <div class="invalid-feedback" v-if="formErrors.oldPassword">Please enter your current password.</div>
+          </div>
+          <div class="form-group">
+            <label for="password">New password</label>
+            <input class="form-control" type="password" id="password" :class="[formErrors.newPassword ? 'is-invalid' : '']" v-model.trim="formData.newPassword">
+            <div class="invalid-feedback" v-if="formErrors.newPassword === 'minLength'">Password too short!</div>
+            <div class="invalid-feedback" v-else-if="formErrors.newPassword">Please enter your new password.</div>
+            <p class="mt-2"> Minimum length is 8 characters</p>
+          </div>
+        </div>
+        <div class="border-0 justify-content-center">
           <ajax-button type="submit" :syncing="syncing" class="btn btn-sm btn-block btn-info">Save</ajax-button>
         </div>
       </ajax-form>
@@ -142,7 +176,7 @@
   </modal>
 
   <modal v-if="modal === 'update-billing-card'" data-backdrop="false" @close="closeModal()" v-cloak purpose="modal">
-    <div class="container">
+    <div class="container" purpose="customer-portal-form">
       <div class="modal-header text-left">
         <h3 class="modal-title">Edit card?</h3>
         <p class="muted">Currently using: {{me.billingCardBrand}} ending in {{me.billingCardLast4}}</p>
@@ -168,7 +202,7 @@
           <p class="text-muted mb-0">This may restrict your access to paid features.</p>
           <cloud-error v-if="cloudError"></cloud-error>
         </div>
-        <div class="modal-footer border-0 justify-content-center">
+        <div class="border-0 justify-content-center">
           <ajax-button type="submit" :syncing="syncing" class="btn btn-sm btn-block btn-primary">Remove</ajax-button>
         </div>
       </ajax-form>
