Lint fixes, page updates, mobile styles

--- a/website/assets/styles/components/stripe-card-element.component.less
+++ b/website/assets/styles/components/stripe-card-element.component.less
@@ -13,9 +13,9 @@
       padding-right: 30px;
       &.pseudofocused {
         // These should mimic your normal form inputs' :focus styles:
-        border-color: #80bdff;
+        border-color: #6a67fe;
         outline: 0;
-        box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+        box-shadow: none;
       }
     }
     .status-indicator {
