--- a/website/assets/styles/pages/entrance/forgot-password.less
+++ b/website/assets/styles/pages/entrance/forgot-password.less
@@ -17,7 +17,7 @@
     height: 40px;
     border-radius: 4px;
   }
-  [purpose="customer-portal-form"] {
+  [purpose='customer-portal-form'] {
     .form-group {
       margin-bottom: 16px;
     }
@@ -28,7 +28,7 @@
       padding: 2em;
     }
   }
-  [purpose="submit-button"] {
+  [purpose='submit-button'] {
 
     border-radius: 4px;
     padding-top: 10px;
@@ -46,7 +46,7 @@
 
   }
 
-  [purpose="back-button"] {
+  [purpose='back-button'] {
     border-radius: 4px;
     padding-top: 10px;
     padding-bottom: 10px;
