--- a/website/assets/styles/pages/entrance/login.less
+++ b/website/assets/styles/pages/entrance/login.less
@@ -9,7 +9,7 @@
     font-size: 16px;
   }
 
-  [purpose="customer-portal-form"] {
+  [purpose='customer-portal-form'] {
     label {
       font-weight: 700;
       margin-bottom: 4px;
@@ -29,7 +29,7 @@
     }
   }
 
-  [purpose="submit-button"] {
+  [purpose='submit-button'] {
 
     border-radius: 4px;
     padding-top: 10px;
@@ -47,7 +47,7 @@
 
   }
 
-  [purpose="features-list"] {
+  [purpose='features-list'] {
     // min-width: 254px;
     word-wrap: overflow;
    ul {
