--- a/website/assets/styles/pages/entrance/signup.less
+++ b/website/assets/styles/pages/entrance/signup.less
@@ -5,15 +5,11 @@
   a {
     color: @core-vibrant-blue;
   }
-  a:hover {
-    // text-decoration: none;
-    color: darken(@core-vibrant-blue, 20%);
-  }
   p {
     font-size: 16px;
   }
 
-  [purpose="customer-portal-form"] {
+  [purpose='customer-portal-form'] {
     label {
       font-weight: 700;
       margin-bottom: 4px;
@@ -33,7 +29,7 @@
     }
   }
 
-  [purpose="submit-button"] {
+  [purpose='submit-button'] {
 
     border-radius: 4px;
     padding-top: 10px;
@@ -51,7 +47,7 @@
 
   }
 
-  [purpose="features-list"] {
+  [purpose='features-list'] {
     // min-width: 254px;
     word-wrap: overflow;
    ul {
@@ -61,6 +57,7 @@
    li {
     padding-bottom: 12px;
     color: @core-fleet-black-75;
+    white-space: nowrap;
    }
    img {
     display: inline;
