--- a/website/views/pages/entrance/new-password.ejs
+++ b/website/views/pages/entrance/new-password.ejs
@@ -14,12 +14,9 @@
             <div class="invalid-feedback" v-if="formErrors.confirmPassword">Your new password and confirmation do not match.</div>
           </div>
           <cloud-error v-if="cloudError"></cloud-error>
-
-            <ajax-button spinner purpose="submit-button" spinner="true" type="submit" :syncing="syncing" class="btn btn-info btn-lg btn-block">Submit</ajax-button>
-
+          <ajax-button purpose="submit-button" spinner="true" type="submit" :syncing="syncing" class="btn btn-info btn-lg btn-block">Submit</ajax-button>
         </ajax-form>
       </div>
-    </div>
   </div>
 </div>
 <%- /* Expose locals as `window.SAILS_LOCALS` :: */ exposeLocalsToBrowser() %>
