--- a/website/assets/styles/pages/customers/dashboard.less
+++ b/website/assets/styles/pages/customers/dashboard.less
@@ -18,7 +18,7 @@
     font-size: 16px;
   }
 
-  [purpose="customer-portal-form"] {
+  [purpose='customer-portal-form'] {
     label {
       font-weight: 700;
       margin-bottom: 4px;
@@ -38,7 +38,7 @@
     }
   }
 
-  [purpose="submit-button"] {
+  [purpose='submit-button'] {
 
     border-radius: 4px;
     padding-top: 10px;
@@ -56,7 +56,8 @@
 
   }
 
-  [purpose="edit-button"]{
+  [purpose='edit-button'] {
+
     display: inline-block;
     margin-bottom: 3px;
     margin-left: 8px;
@@ -65,34 +66,31 @@
     cursor: pointer;
   }
 
-  [purpose="slack-button"] {
+  [purpose='slack-button'] {
     font-size: 14px;
     color: @core-fleet-black;
     background-color: #fff;
     border: 1px solid #C5C7D1;
     border-radius: 4px;
+    padding: 8px 40px;
+    line-height: 24px;
     &:hover {
       background: #fff;
     }
     &:focus {
       box-shadow: none;
     }
-    line-height: 20px;
-    padding: 8px 40px;
     img {
       display: inline;
       height: 24px;
       width: auto;
-    }
-    &:focus {
-      box-shadow: none;
     }
     a {
       color: @core-fleet-black;
       text-decoration: none;
     }
   }
-  [purpose="deploy-button"] {
+  [purpose='deploy-button'] {
     font-size: 14px;
     line-height: 24px;
     padding: 8px 40px;
@@ -107,7 +105,7 @@
     border-radius: 8px;
     box-shadow: 1px 2px 2px 0px #C5C7D133;
   }
-  [purpose="contact"] {
+  [purpose='contact'] {
     background: #F1F0FF;
     border: 1px solid #D9D9FE;
     box-sizing: border-box;
@@ -115,11 +113,12 @@
     padding: 16px;
     font-size: 13px;
     a {
+      font-weight: 700;
       text-underline-offset: 5px;
     }
   }
 
-  [purpose="billing-card"] {
+  [purpose='billing-card'] {
     padding: 40px;
     min-height: 312px;
     p {
@@ -128,7 +127,7 @@
 
   }
 
-  [purpose="details-card"] {
+  [purpose='details-card'] {
     padding: 40px;
     min-height: 312px;
     hr {
@@ -137,7 +136,7 @@
 
   }
 
-  [purpose="license-card"]{
+  [purpose='license-card'] {
     padding: 30px 40px 30px 40px;
     p {
       margin-block-end: 0px;
@@ -147,7 +146,7 @@
       padding-bottom: 8px;
     }
 
-    [purpose="copied-notification"]{
+    [purpose='copied-notification'] {
       display: none;
       font-weight: 400;
       position: relative;
@@ -155,14 +154,11 @@
       left: 10px;
       font-size: 16px;
       line-height: 20px;
+      white-space: nowrap;
       color: @core-vibrant-blue;
-      // animation-name: copiedText;
-      // animation-duration: 4s;
-      // animation-fill-mode: forwards;
-      z-index: 300;
     }
 
-    [purpose="license-key"] {
+    [purpose='license-key'] {
       display: block;
       text-overflow: ellipsis;
       overflow: hidden;
@@ -171,7 +167,6 @@
       cursor: pointer;
 
       &.show-overflow {
-        overflow: unset;
         display: inline;
         cursor: pointer;
         overflow: auto;
@@ -184,11 +179,34 @@
 
   @media (max-width: 991px) {
 
-    [purpose="details-card"] {
+    [purpose='details-card'] {
       min-height: auto;
-
     }
 
+
   }
+
+  @media (max-width: 768px) {
+
+    [purpose='modal-content'] {
+      margin-top: 50px;
+      padding-left: 10px;
+      padding-right: 10px;
+    }
+
+    [purpose='license-card'] {
+      padding: 30px 20px;
+    }
+
+    [purpose='details-card'] {
+      padding: 40px 20px;
+    }
+
+    [purpose='billing-card'] {
+      padding: 40px 20px;
+    }
+  }
+
+
 
 }
