--- a/website/views/layouts/customer-layout.ejs
+++ b/website/views/layouts/customer-layout.ejs
@@ -71,11 +71,13 @@
 
       <div purpose="footer" style="position: absolute; bottom:  0px; width: 100%; height:  60px; color: #515774;">
         <div style="max-width: 500px;" class="container-fluid">
-          <div style="font-size: 11px; line-height: 18px;" class="d-flex flex-row justify-content-center">
-            <img alt="Creative Commons Licence CC BY-SA 4.0" src="/images/logo-creative-commons-160x30@2x.png" style="width: 80px; height: 15px;" class="mr-2"/>
-            © 2021 Fleet Device Management Inc.
-            <a style="font-size: 12px; font-weight:  700; text-underline-offset: 5px; text-decoration: underline; color: #515774" class="ml-2" href="/legal/privacy">Privacy</a>
-            <a style="font-size: 12px; font-weight:  700; text-underline-offset: 5px; text-decoration: underline; color: #515774" class="ml-2 <%= _.has(me, 'id') ? 'd-flex' : 'd-none' %>" href="/logout">Log out</a>
+          <div style="font-size: 11px; line-height: 18px;" class="d-sm-flex d-block flex-sm-row justify-content-center mr-4 mr-md-auto">
+            <img alt="Creative Commons Licence CC BY-SA 4.0" src="/images/logo-creative-commons-160x30@2x.png" style="width: 80px; height: 15px;" class="mr-2 mb-2 mb-sm-0"/>
+            <div class="d-flex">
+              © 2021 Fleet Device Management Inc.
+              <a style="font-size: 12px; font-weight:  700; text-underline-offset: 5px; text-decoration: underline; color: #515774" class="ml-2" href="/legal/privacy">Privacy</a>
+              <a style="font-size: 12px; font-weight:  700; text-underline-offset: 5px; text-decoration: underline; color: #515774" class="ml-2 <%= _.has(me, 'id') ? 'd-flex' : 'd-none' %>" href="/logout">Log out</a>
+            </div>
           </div>
         </div>
       </div>
