--- a/website/views/layouts/layout.ejs
+++ b/website/views/layouts/layout.ejs
@@ -136,8 +136,7 @@
           <div class="d-flex flex-grow-1 flex-column">
             <div purpose="footer-nav" class="justify-content-between justify-content-sm-end order-l pb-xl-2 px-lg-0">
               <div class="flex-column">
-                <!-- <a href="/get-started" class="d-block pr-md-5 pr-sm-3 pb-2">Get started</a> -->
-                <a href="/customers/dashboard" class="d-block pr-md-5 pr-sm-3 pb-2">Customers</a>
+                <a href="/get-started" class="d-block pr-md-5 pr-sm-3 pb-2">Get started</a>
                 <a href="/docs" class="d-block pr-md-5 pr-sm-3 pb-2">Docs</a>
                 <a href="/transparency" class="d-block pr-md-5 pr-sm-3 pb-2 pb-xl-0">Transparency</a>
               </div>
@@ -149,7 +148,7 @@
               <div class="flex-column">
                 <a href="/handbook" class="d-block pr-lg-2 pl-md-5 pl-sm-3 pb-2">Handbook</a>
                 <a href="/docs/contributing" class="d-block pr-lg-2 pl-md-5 pl-sm-3 pb-2">Contribute</a>
-                <a href="/hall-of-fame" class="d-block pr-lg-2 pl-md-5 pl-sm-3 pb-2 pb-xl-0">Hall of fame</a>
+                <a href="/customers/dashboard" class="d-block pr-lg-2 pl-md-5 pl-sm-3 pb-2 pb-xl-0">Customers</a>
               </div>
             </div>
           </div>
