--- a/website/views/pages/entrance/login.ejs
+++ b/website/views/pages/entrance/login.ejs
@@ -1,33 +1,34 @@
 <div id="login" v-cloak>
-  <div style="max-width: 890px; padding-top: 80px;" class="container-fluid pb-5">
+  <div style="max-width: 890px; padding-top: 80px;" class="container-fluid pb-5 px-lg-0 px-5">
     <h1>Welcome to Fleet Premium</h1>
     <p class="pb-2">We just need a few details in order to get you a Fleet Premium license key</p>
-    <div  purpose="customer-portal-form" class="d-flex flex-row">
+    <div  purpose="customer-portal-form" class="d-flex flex-row justify-content-between">
 
-      <div class="card card-body order-first flex-grow-1" >
-
-        <ajax-form action="login" :syncing.sync="syncing" :cloud-error.sync="cloudError" :form-data="formData" :form-rules="formRules" :form-errors.sync="formErrors" @submitted="submittedForm()">
-          <div class="form-group">
-            <label for="email">Email</label>
-            <span style="float: right" class="text-right"><a href="/customers/register">Create an account</a></span>
-            <input type="email" class="form-control" :class="[formErrors.emailAddress ? 'is-invalid' : '']" v-model.trim="formData.emailAddress" autocomplete="email" focus-first>
-            <div class="invalid-feedback" v-if="formErrors.emailAddress">Please provide a valid email address.</div>
-          </div>
-          <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" class="form-control" :class="[formErrors.password ? 'is-invalid' : '']" v-model.trim="formData.password" autocomplete="current-password">
-            <div class="invalid-feedback" v-if="formErrors.password">Please enter your password.</div>
-          </div>
-          <cloud-error v-if="cloudError==='badCombo'">Something’s not quite right with your email or password.</cloud-error>
-          <cloud-error v-else-if="cloudError"></cloud-error>
-          <div class="form-group">
-            <ajax-button :syncing="syncing" spinner="true" purpose="submit-button" class="btn-info mt-4 btn-lg btn-block">Sign in</ajax-button>
-          </div>
-        </ajax-form>
-        <span class="text-center"><a href="/customers/forgot-password">Forgot your password?</a></span>
+      <div class="order-first flex-grow-1 pr-md-4">
+        <div class="card card-body">
+          <ajax-form action="login" :syncing.sync="syncing" :cloud-error.sync="cloudError" :form-data="formData" :form-rules="formRules" :form-errors.sync="formErrors" @submitted="submittedForm()">
+            <div class="form-group">
+              <label for="email">Email</label>
+              <span style="float: right" class="text-right"><a href="/customers/register">Create an account</a></span>
+              <input type="email" class="form-control" :class="[formErrors.emailAddress ? 'is-invalid' : '']" v-model.trim="formData.emailAddress" autocomplete="email" focus-first>
+              <div class="invalid-feedback" v-if="formErrors.emailAddress">Please provide a valid email address.</div>
+            </div>
+            <div class="form-group">
+              <label for="password">Password</label>
+              <input type="password" class="form-control" :class="[formErrors.password ? 'is-invalid' : '']" v-model.trim="formData.password" autocomplete="current-password">
+              <div class="invalid-feedback" v-if="formErrors.password">Please enter your password.</div>
+            </div>
+            <cloud-error v-if="cloudError==='badCombo'">Something’s not quite right with your email or password.</cloud-error>
+            <cloud-error v-else-if="cloudError"></cloud-error>
+            <div class="form-group">
+              <ajax-button :syncing="syncing" spinner="true" purpose="submit-button" class="btn-info mt-4 btn-lg btn-block">Sign in</ajax-button>
+            </div>
+          </ajax-form>
+          <span class="text-center"><a href="/customers/forgot-password">Forgot your password?</a></span>
+        </div>
       </div>
 
-      <div class="order-last d-none d-md-block ml-auto pl-4" purpose="features-list">
+      <div class="order-last d-none d-md-block" purpose="features-list">
         <p><strong>Fleet Premium includes:</strong></p>
         <ul>
           <li><img alt="A checkmark" src="/images/check-16x16@2x.png">Everything in Fleet Free</li>
