--- a/frontend/pages/UserSettingsPage/_styles.scss
+++ b/frontend/pages/UserSettingsPage/_styles.scss
@@ -153,7 +153,20 @@
     font-size: $xx-small;
     text-align: center;
     display: block;
-    margin-top: $pad-xxlarge;
+    margin-top: $pad-large;
+  }
+
+  &__privacy-policy {
+    text-align: center;
+    display: block;
+    margin-top: $pad-xlarge;
+
+    a {
+      font-size: $x-small;
+      color: $core-vibrant-blue;
+      font-weight: $bold;
+      text-decoration: none;
+    }
   }
 
   .grey-cell {
