--- a/website/assets/styles/components/modal.component.less
+++ b/website/assets/styles/components/modal.component.less
@@ -26,14 +26,13 @@
   // (Want to use Bootstrap's default styles? Just comment out the rest of the rules below)
   .petticoat {
     display: none;
-    // position: fixed;
-    // width: 100%;
-    // height: 75px;// should cover topbar
-    // z-index: 50;
-    // left: 0px;
-    // top: 0px;
-    // // background-color: @accent-white;
-    // background-color: #8b8fa2;
+    position: fixed;
+    width: 100%;
+    height: 75px;// should cover topbar
+    z-index: 50;
+    left: 0px;
+    top: 0px;
+    background-color: @accent-white;
   }
   .modal-content {
     border-color: @accent-white;
