--- a/frontend/components/forms/fields/Checkbox/_styles.scss
+++ b/frontend/components/forms/fields/Checkbox/_styles.scss
@@ -5,6 +5,10 @@
 
   &__input {
     opacity: 0;
+    width: 16px;
+    height: 16px;
+    margin: 2px;
+    transform: translateY(3px);
 
     &:focus + .fleet-checkbox__tick {
       &::after {
@@ -37,7 +41,7 @@
   &__tick {
     @include size(20px);
     @include position(absolute, 50% null null 0);
-    transform: translateY(-10px);
+    transform: translateY(-8px);
     display: inline-block;
 
     &::after {
