changes requested from code review and #3570

--- a/website/views/pages/customers/dashboard.ejs
+++ b/website/views/pages/customers/dashboard.ejs
@@ -82,9 +82,9 @@
             <div purpose="contact">
             <div class="row">
               <div style="max-width: 32px;" class="col-1 pr-0">
-                <img style="display: inline-block; height: 16px; width: 16px; margin-top: 5px;" src="/images/info-16x16@2x.png" alt="An icon indicating that this section has important information">
+                <img style="display: inline-block; height: 16px; width: 16px; margin-top: 3px;" src="/images/info-16x16@2x.png" alt="An icon indicating that this section has important information">
               </div>
-              <div class="col pl-1">
+              <div class="col ml-1 pl-1">
                 <p><a href="/contact" target="_blank">Contact us</a> to change your number of devices, or to <strong>cancel</strong> your subscription.</p>
               </div>
             </div>
