--- a/website/views/pages/entrance/forgot-password.ejs
+++ b/website/views/pages/entrance/forgot-password.ejs
@@ -6,7 +6,7 @@
         <div class="form-group">
           <label for="email-address">Email</label>
           <span style="float: right" class="text-right"><a href="/customers/login">I have an account</a></span>
-          <input type="email" name="email-address" class="form-control" placeholder="sturgeon@example.com" :class="[formErrors.emailAddress ? 'is-invalid' : '']" v-model.trim="formData.emailAddress" autocomplete="email" focus-first>
+          <input type="email" name="email-address" class="form-control" placeholder="example@email.com" :class="[formErrors.emailAddress ? 'is-invalid' : '']" v-model.trim="formData.emailAddress" autocomplete="email" focus-first>
           <div class="invalid-feedback" v-if="formErrors.emailAddress">Please enter a valid email address.</div>
         </div>
         <cloud-error v-if="cloudError"></cloud-error>
@@ -16,7 +16,9 @@
     <div style="max-width:  450px;" class="mx-auto text-center" v-else>
       <p>We've sent you a link to update your password.</p>
       <hr/>
-      <p>If the email doesn’t arrive after a few minutes, try checking your spam folder.  If you still can’t find it, please try again, or <a href="/contact">contact support</a>.</p>
+      <p>
+      If the email you entered is associated with a Fleet account, you should receive a recovery email shortly. If the email doesn’t arrive, please try again, or <a href="/contact">contact support</a>.
+      </p>
       <p class="text-center"><a purpose="back-button" class="btn btn-info" href="/login"><span>Back to login</span></a></p>
     </div>
   </div>
