--- a/website/views/pages/customers/new-license.ejs
+++ b/website/views/pages/customers/new-license.ejs
@@ -1,6 +1,6 @@
 
 <div id="new-license" v-cloak>
-  <div style="max-width: 890px; padding-top: 80px;" class="container-fluid pb-5 px-lg-0 px-5" v-if="!orderComplete">
+  <div style="max-width: 890px; padding-top: 80px;" class="container-fluid pb-5 px-lg-0 px-5" v-if="!showSuccessMessage">
     <h1>Welcome to Fleet Premium</h1>
     <p class="pb-2">We just need a few details in order to get you a Fleet Premium license key</p>
     <div class="d-flex flex-row justify-content-between">
@@ -9,13 +9,13 @@
         <div class="card card-body">
           <ajax-form action="createQuote" :class="[showBillingForm ? 'pb-2' : '' ]" :syncing.sync="syncing" :cloud-error.sync="cloudError" :form-errors.sync="formErrors" :form-data="formData" :form-rules="quoteFormRules" @submitted="submittedQuoteForm($event)">
             <div class="d-flex flex-row">
-              <div class="form-group flex-grow-1 order-first">
+              <div class="form-group flex-grow-1 col-6 order-first pl-0">
                 <label for="numberOfHosts">Total number of devices</label>
                 <input class="form-control" min="1" purpose="quote-input" id="numberOfHosts" type="number" :class="[formErrors.numberOfHosts ? 'is-invalid' : formErrors.numberOfHosts < 1 ]" focus-first v-model.trim="formData.numberOfHosts" v-if="!showQuotedPrice">
-                <span style="width: 100%; position: relative; cursor: text;" class="form-control" @click="clickResetForm()" v-else>{{formData.numberOfHosts}}<span style="position: absolute; bottom: 10px; right: 5px;" class="text-muted fa fa-times-circle pl-2"></span></span>
+                <span style="position: relative; cursor: text;" class="form-control" @click="clickResetForm()" v-else>{{formData.numberOfHosts}}<span style="position: absolute; bottom: 10px; right: 5px;" class="text-muted fa fa-times-circle pl-2"></span></span>
                 <div class="invalid-feedback" v-if="formErrors.numberOfHosts">Please enter a number of hosts</div>
               </div>
-              <div style="color: #515774;" class="order-last text-right pl-md-4 pl-1 pt-4">
+              <div style="color: #515774;" class="order-last text-right col-6 pr-0 pl-md-4 pl-1 pt-4">
                 <p>
                   <strong class="pr-1" style="font-size: 18px; color: #192147">$1.00</strong>/month/device<br>(Billed annually at $12/device)
                 </p>
@@ -64,11 +64,11 @@
     </div>
   </div>
 
-  <div style="max-width: 500px; padding-top: 80px;" class="container-fluid pb-5 text-center" v-else>
+  <div style="max-width: 650px; padding-top: 80px;" class="container-fluid pb-5 text-center" v-else>
     <h1>Thank you, your order is complete.</h1>
     <p>Welcome to your admin dashboard.</p>
     <p>From here you can access your license key, change your details and update your payment method, and find to help you deploy Fleet.</p>
-    <ajax-button style="height: 40px; font-size: 14px; line-height: 24px;" type="submit" purpose="submit-button" :syncing="syncing" spinner="true" class="btn btn-block btn-lg btn-info" @click="clickGoToDashboard()">Contine to dashboard</ajax-button>
+    <ajax-button style="height: 40px; font-size: 14px; line-height: 24px; width: 200px" type="submit" purpose="submit-button" :syncing="syncing" spinner="true" class="btn btn-block btn-lg btn-info mx-auto" @click="clickGoToDashboard()">Contine to dashboard</ajax-button>
   </div>
 </div>
 <%- /* Expose server-rendered data as window.SAILS_LOCALS :: */ exposeLocalsToBrowser() %>
