submit button width, contact font-size

--- a/website/assets/styles/pages/customers/dashboard.less
+++ b/website/assets/styles/pages/customers/dashboard.less
@@ -36,7 +36,9 @@
   }
 
   [purpose='submit-button'] {
-
+    width: 200px;
+    margin-left: auto;
+    margin-right: auto;
     border-radius: 4px;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -108,8 +110,11 @@
     box-sizing: border-box;
     border-radius: 4px;
     padding: 16px;
-    font-size: 14px;
+    p {
+      font-size: 14px;
+    }
     a {
+      font-size: 14px;
       font-weight: 700;
       text-underline-offset: 5px;
     }
