--- a/website/assets/styles/pages/entrance/forgot-password.less
+++ b/website/assets/styles/pages/entrance/forgot-password.less
@@ -28,7 +28,9 @@
     }
   }
   [purpose='submit-button'] {
-
+    width: 200px;
+    margin-left: auto;
+    margin-right: auto;
     border-radius: 4px;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -57,7 +59,7 @@
       display: block;
       margin-left: auto;
       margin-right: auto;
-      font-size: 14px;
+      font-size: 16px;
       line-height: 20px;
       vertical-align: center;
       font-weight: 400;
