--- a/website/assets/styles/pages/entrance/login.less
+++ b/website/assets/styles/pages/entrance/login.less
@@ -27,7 +27,9 @@
   }
 
   [purpose='submit-button'] {
-
+    width: 200px;
+    margin-left: auto;
+    margin-right: auto;
     border-radius: 4px;
     padding-top: 10px;
     padding-bottom: 10px;
