--- a/website/views/pages/entrance/signup.ejs
+++ b/website/views/pages/entrance/signup.ejs
@@ -10,34 +10,34 @@
               <div class="form-group">
                 <label for="email-address">Email</label>
                 <span style="float: right" class="text-right"><a href="/customers/login">I have an account</a></span>
-                <input class="form-control" id="email-address" type="email"  :class="[formErrors.emailAddress ? 'is-invalid' : '']" v-model.trim="formData.emailAddress" @input="formErrors = {};">
+                <input class="form-control" id="email-address"  :class="[formErrors.emailAddress ? 'is-invalid' : '']" v-model.trim="formData.emailAddress" @input="typeClearOneFormError('emailAddress')">
                 <div class="invalid-feedback" v-if="formErrors.emailAddress" focus-first>This doesn’t appear to be a valid email address</div>
               </div>
               <div v-show="formData.emailAddress || showFullForm">
                 <div class="form-group">
                   <label for="password">Choose a password</label>
-                  <input class="form-control" id="password" type="password"  :class="[formErrors.password ? 'is-invalid' : '']" v-model.trim="formData.password" autocomplete="new-password" @input="formErrors = {};">
+                  <input class="form-control" id="password" type="password"  :class="[formErrors.password ? 'is-invalid' : '']" v-model.trim="formData.password" autocomplete="new-password" @input="typeClearOneFormError('password')">
                   <div class="invalid-feedback" v-if="formErrors.password === 'minLength'">Password too short.</div>
                   <div class="invalid-feedback" v-if="formErrors.password === 'required'">Please enter a password.</div>
                   <p class="mt-2"> Minimum length is 8 characters</p>
                 </div>
                 <div class="form-group">
                   <label for="organization">Organization</label>
-                  <input class="form-control" id="organization" type="text"  :class="[formErrors.organization ? 'is-invalid' : '']" v-model.trim="formData.organization" @input="formErrors = {};">
+                  <input class="form-control" id="organization" type="text"  :class="[formErrors.organization ? 'is-invalid' : '']" v-model.trim="formData.organization" @input="typeClearOneFormError('organization')">
                   <div class="invalid-feedback" v-if="formErrors.organization">Please enter the name of your organization.</div>
                 </div>
                 <div class="row">
                   <div class="col-6">
                     <div class="form-group">
                       <label for="first-name">First name</label>
-                      <input class="form-control" id="first-name" type="text"  :class="[formErrors.firstName ? 'is-invalid' : '']" v-model.trim="formData.firstName" autocomplete="first-name" @input="formErrors = {};">
+                      <input class="form-control" id="first-name" type="text"  :class="[formErrors.firstName ? 'is-invalid' : '']" v-model.trim="formData.firstName" autocomplete="first-name" @input="typeClearOneFormError('firstName')">
                       <div class="invalid-feedback" v-if="formErrors.firstName">Please enter your first name.</div>
                     </div>
                   </div>
                   <div class="col-6">
                     <div class="form-group">
                       <label for="last-name">Last name</label>
-                      <input class="form-control" id="last-name" type="text"  :class="[formErrors.lastName ? 'is-invalid' : '']" v-model.trim="formData.lastName" autocomplete="last-name" @input="formErrors = {};">
+                      <input class="form-control" id="last-name" type="text"  :class="[formErrors.lastName ? 'is-invalid' : '']" v-model.trim="formData.lastName" autocomplete="last-name" @input="typeClearOneFormError('lastName')">
                       <div class="invalid-feedback" v-if="formErrors.lastName">Please enter your last name.</div>
                     </div>
                   </div>
