--- a/website/assets/styles/bootstrap-overrides.less
+++ b/website/assets/styles/bootstrap-overrides.less
@@ -174,7 +174,7 @@ a.text-danger:hover, a.text-danger:focus {
 	border: 1px solid #C5C7D1;
 }
 .form-control:focus {
-	border: 2px solid #6a67fe;
+	border: 1px solid #6a67fe;
 	box-shadow: unset;
 }
 .form-control.is-invalid:focus {
@@ -184,7 +184,8 @@ a.text-danger:hover, a.text-danger:focus {
   color: #FF5C83;
 }
 .form-control.is-invalid {
-	border: 2px solid #FF5C83;
+  color: #FF5C83;
+  border: 1px solid #FF5C83;
 }
 textarea.form-control {
 	height: 108px;
