slack logo update, login text

--- a/website/assets/styles/pages/customers/dashboard.less
+++ b/website/assets/styles/pages/customers/dashboard.less
@@ -81,8 +81,9 @@
     }
     img {
       display: inline;
-      height: 24px;
+      height: 20px;
       width: auto;
+      padding-right: 4px;
     }
     a {
       color: @core-fleet-black;
