--- a/website/views/pages/customers/new-license.ejs
+++ b/website/views/pages/customers/new-license.ejs
@@ -2,7 +2,7 @@
 <div id="new-license" v-cloak>
   <div style="max-width: 890px; padding-top: 80px;" class="container-fluid pb-5 px-lg-0 px-5" v-if="!showSuccessMessage">
     <h1>Welcome to Fleet Premium</h1>
-    <p class="pb-2">We just need a few details in order to get you a Fleet Premium license key</p>
+    <p class="pb-2">We just need a few details in order to get you a Fleet Premium license key.</p>
     <div class="d-flex flex-row justify-content-between">
 
       <div purpose="customer-portal-form" class="order-first flex-grow-1 pr-md-4">
