--- a/website/views/pages/customers/dashboard.ejs
+++ b/website/views/pages/customers/dashboard.ejs
@@ -101,7 +101,7 @@
       </div>
       <div class="btn btn-outline-secondary btn-sm" purpose="slack-button">
         <a href="https://osquery.slack.com/join/shared_invite/zt-h29zm0gk-s2DBtGUTW4CFel0f0IjTEw#/" target="_blank">
-          <img class="pr-3" alt="Slack logo" src="/images/logo-slack-24x24@2x.png"/>
+          <img alt="Slack logo" src="/images/logo-slack-24x24@2x.png"/>
           Ask for help on Slack
         </a>
       </div>
