--- a/website/views/pages/entrance/login.ejs
+++ b/website/views/pages/entrance/login.ejs
@@ -1,7 +1,7 @@
 <div id="login" v-cloak>
   <div style="max-width: 890px; padding-top: 80px;" class="container-fluid pb-5 px-lg-0 px-5">
     <h1>Welcome to Fleet Premium</h1>
-    <p class="pb-2">We just need a few details in order to get you a Fleet Premium license key</p>
+    <p class="pb-2">Sign in to view your Fleet Premium dashboard.</p>
     <div  purpose="customer-portal-form" class="d-flex flex-row justify-content-between">
 
       <div class="order-first flex-grow-1 pr-md-4">
